# fido2-ctap-gadget

./: .gitignore  LICENSE  Makefile.am  README  configure.ac  crypto.c  fido.c  fido_configfs.sh  hidgd-tpm.h  hidgd.1.in  hidgd.c  hidgd.h  tpm.c  u2f.h  u2f_hid.h
